--- a/index.html
+++ b/index.html
@@ -5,16 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="royal">
     <header>
-        <h1>Home</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Notes</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <nav class="main-nav">
-        <ul>
-            <li><a href="aboutMe.html">About Me</a></li><br>
-        </ul>
-    </nav>
+    <br>
+    <br>
+
+    <main>
+        <article>
+            <h3>Who Am I:</h3>
+            <p> 
+                Hi, my name is Bersun E. Manavoğlu 24 years old tech enthusiast. <br>
+                I am spending my days on learning new stuff and enjoying all kinds off games. <br>
+                It's nice to see you here hope we can have chance to interact in future. <br>
+            </p>
+
+            <br>
+            <br>
+
+            <h3>Education:</h3>
+            <p>
+                Currently studying my last year in Computer Education and Educational Technology in NEU, Cyprus. <br>
+                Besides the university I also take a course on CyprusCodes to strengthen my foundations. <br>
+                I am confortable at finding my way with python and I am also a self taught pentester. <br>
+                Got my IELTS(7) in my 18's and study Game Technologies in England for few years. <br>
+            </p>
+
+            <br>
+            <br>
+
+            <h3>Tools & Languages I Work With:</h3>
+            <p>
+                Python <br>
+                Java <br>
+                PHP <br>
+                HTML <br>
+                CSS <br>
+                Bootstrap <br>
+                Moodle <br>
+
+            </p>
+
+            <br>
+            <br>
+
+            <h3>Hobbies:</h3>
+            <p>
+                Street walking <br>
+                Swimming <br>
+                Playing guitar <br>
+                Biking <br>
+                Video games <br>
+                All sorts of tech <br>
+            </p>
+
+            <br>
+            <br>
+
+            <h3>Contact:</h3>
+            <p>
+                Email: bersunmanavoglu@gmail.com <br>
+                <button type="button"> <a href="https://github.com/Mbersun">GitHub</a></button>
+                <button type="button"> <a href="https://twitter.com/Mnvbersun">Twitter</a></button>
+                <button type="button"> <a href="https://www.linkedin.com/in/bersun-manav-7a45151b0/">Linkedin</a></button>
+            </p>
+        </article>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
