--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body class="royal">
     <header>
-        <nav>
+        <nav id="navbar">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Notes</a></li>
@@ -17,12 +18,14 @@
             </ul>
         </nav>
     </header>
+    <body>
 
     <br>
     <br>
 
     <main>
-        <article>
+        <article id="container">
+            <h1>Welcome!</h1>
             <h3>Who Am I:</h3>
             <p> 
                 Hi, my name is Bersun E. Manavoğlu 24 years old tech enthusiast. <br>
@@ -53,7 +56,6 @@
                 CSS <br>
                 Bootstrap <br>
                 Moodle <br>
-
             </p>
 
             <br>
@@ -75,9 +77,9 @@
             <h3>Contact:</h3>
             <p>
                 Email: bersunmanavoglu@gmail.com <br>
-                <button type="button"> <a href="https://github.com/Mbersun">GitHub</a></button>
-                <button type="button"> <a href="https://twitter.com/Mnvbersun">Twitter</a></button>
-                <button type="button"> <a href="https://www.linkedin.com/in/bersun-manav-7a45151b0/">Linkedin</a></button>
+                <a href="https://twitter.com/Mnvbersun" ><img src="icons/TLB.png" alt="Twitterİcon" width="20" height="20"></a>
+                <a href="https://www.linkedin.com/in/bersun-manav-7a45151b0/" ><img src="icons/Li.png" alt="Liİcon" width="20" height="20"></a>
+                <a href="https://github.com/Mbersun" ><img src="icons/GitHub.png" alt="Liİcon" width="20" height="20"></a>
             </p>
         </article>
     </main>
