--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body class="royal">
-    <header>
-        <nav id="navbar">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Notes</a></li>
-                <li><a href="#">Blog</a></li>
-            </ul>
-        </nav>
-    </header>
-    <body>
+<body>
+    <nav class="nav-list">
+            <li class="nav-item">
+                <a href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+                <a href="#">Notes</a>
+            </li>
+    </nav>
+</body>
 
     <br>
     <br>
 
     <main>
-        <article id="container">
+        <article class="cont">
             <h1>Welcome!</h1>
             <h3>Who Am I:</h3>
             <p> 
