--- a/contact.html
+++ b/contact.html
@@ -7,16 +7,14 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <title>Home</title>
+    <title>Contact</title>
 </head>
 
 <body>
     <header>
         <nav>
             <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-                <i class="fas fa-bars"></i>
-            </label>
+            <label for="check" class="checkbtn"></label>
             <label class="logo">Bersun</label>
             <ul>
                 <li><a href="index.html">Home</a></li>
