--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <header>
         <nav>
             <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-                <i class="fas fa-bars"></i>
-            </label>
+            <label for="check" class="checkbtn"></label>
             <label class="logo">Bersun</label>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -102,12 +100,11 @@
                 <div>
                     <div>
                         <h3>Contact:</h3>
-                        <p>
-                            Email: bersunmanavoglu@gmail.com <br>
-                            <a href="https://twitter.com/Mnvbersun"><img src="icons/TLB.png" alt="Twitterİcon" width="20" height="20"></a>
-                            <a href="https://www.linkedin.com/in/bersun-manav-7a45151b0/"><img src="icons/Li.png" alt="Liİcon" width="20" height="20"></a>
-                            <a href="https://github.com/Mbersun"><img src="icons/GitHub.png" alt="Liİcon" width="20" height="20"></a>
-                        </p>
+                        Email: bersunmanavoglu@gmail.com <br>
+                        <p>Contact page <a href="contact.html">Here!</a></p>
+                        <a href="https://twitter.com/Mnvbersun"><img src="icons/TLB.png" alt="Twitterİcon" width="20" height="20"></a>
+                        <a href="https://www.linkedin.com/in/bersun-manav-7a45151b0/"><img src="icons/Li.png" alt="Liİcon" width="20" height="20"></a>
+                        <a href="https://github.com/Mbersun"><img src="icons/GitHub.png" alt="Liİcon" width="20" height="20"></a>
                     </div>
                 </div>
             </div>
