--- a/contact.html
+++ b/contact.html
@@ -33,15 +33,18 @@
                 <form action="/">
                     <h1>Contact Me</h1>
                     <div class="info">
-                        <input class="fname" type="text" name="name" placeholder="Full name">
-                        <input type="text" name="name" placeholder="Email">
-                        <input type="text" name="name" placeholder="Phone number">
+                        <input id="fullname" type="text" name="name" placeholder="Full name">
+                        <input id="email" type="text" name="email" placeholder="Email">
+                        <input id="phone" type="text" name="phone" placeholder="Phone number">
                     </div>
                     <p>Message :<p>
                     <div>
-                        <textarea rows="4"></textarea>
+                        <textarea id="message" rows="4"></textarea>
                     </div>
-                        <button type="submit" href="/">Submit</button>
+                        <button onclick="pop()" class="submit" type="button" href="#">Submit</button> 
+                        <br>
+                        <br>
+                        <button class="reset" type="reset" href="#">Reset</button>
                 </form>
             </div>
         </section>
@@ -51,7 +54,7 @@
     <br>
     <br>
     <br>  
-    
+<script src="js/contact.js"></script>  
 </body>
 </html>
 
