--- a/contact.html
+++ b/contact.html
@@ -1,60 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/contact.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Contact</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <input type="checkbox" id="check">
-            <label for="check" class="checkbtn"></label>
-            <label class="logo">Bersun</label>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <button class="ham">
+          <span class="menuIcon material-icons">menu</span>
+          <span class="xIcon material-icons">close</span>
+        </button>
+        <label class="logo">Bersun</label>
+        <ul class="menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <br>
-    <br>
+    <br />
+    <br />
 
     <div class="box">
-        <section>
-            <div class="container">
-                <form action="/">
-                    <h1>Contact Me</h1>
-                    <div class="info">
-                        <input id="fullname" type="text" name="name" placeholder="Full name">
-                        <input id="email" type="text" name="email" placeholder="Email">
-                        <input id="phone" type="text" name="phone" placeholder="Phone number">
-                    </div>
-                    <p>Message :<p>
-                    <div>
-                        <textarea id="message" rows="4"></textarea>
-                    </div>
-                        <button onclick="pop()" class="submit" type="button" href="#">Submit</button> 
-                        <br>
-                        <br>
-                        <button class="reset" type="reset" href="#">Reset</button>
-                </form>
+      <section>
+        <div class="container">
+          <form action="/">
+            <h1>Contact Me</h1>
+            <div class="info">
+              <input
+                id="fullname"
+                type="text"
+                name="name"
+                placeholder="Full name"
+              />
+              <input id="email" type="text" name="email" placeholder="Email" />
+              <input
+                id="phone"
+                type="text"
+                name="phone"
+                placeholder="Phone number"
+              />
             </div>
-        </section>
+            <p>Message :</p>
+            <p></p>
+            <div>
+              <textarea id="message" rows="4"></textarea>
+            </div>
+            <button onclick="pop()" class="submit" type="button" href="#">
+              Submit
+            </button>
+            <br />
+            <br />
+            <button class="reset" type="reset" href="#">Reset</button>
+          </form>
+        </div>
+      </section>
     </div>
 
-    <br>
-    <br>
-    <br>
-    <br>  
-<script src="js/contact.js"></script>  
-</body>
+    <br />
+    <br />
+    <br />
+    <br />
+    <script src="js/contact.js"></script>
+  </body>
 </html>
-
