--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Home</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <input type="checkbox" id="check">
-            <label for="check" class="checkbtn"></label>
+            <button class="ham">
+                <span class="menuIcon material-icons">menu</span>
+                <span class="xIcon material-icons">close</span>
+            </button>
             <label class="logo">Bersun</label>
-            <ul>
+            <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -115,7 +117,7 @@
     <br>
     <br>
     <br>  
-    
+    <script src="js/nav.js"></script>  
 </body>
 </html>
 
