--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div>
                         <h3>Who Am I:</h3>
                         <p>
-                            Hi, my name is Bersun E. Manavoğlu 24 years old tech enthusiast. <br>
+                            Hello, my name is Bersun E. Manavoğlu 24 years old tech enthusiast. <br>
                             I am spending my days on learning new stuff and enjoying all kinds off games. <br>
                             It's nice to see you here hope we can have chance to interact in future. <br>
                         </p>
